[package]
name = "e2mc-test-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
steven_protocol = { git = "https://github.com/kory33/stevenarella", rev = "31f56ff" }
steven_shared = { git = "https://github.com/kory33/stevenarella", rev = "31f56ff" }
steven_blocks = { git = "https://github.com/kory33/stevenarella", rev = "31f56ff" }
